Uploaded image for project: 'Core Server'
  1. Core Server
  2. SERVER-83161

Fix concurrent read to `_errMsg` from `MigrationDestinationManager` without acquiring mutex

    • Type: Icon: Bug Bug
    • Resolution: Fixed
    • Priority: Icon: Major - P3 Major - P3
    • Affects Version/s: 4.4.25, 5.0.22, 6.0.11, 7.0.3, 7.2.0-rc1
    • Component/s: None
    • Labels:
      None
    • Fully Compatible
    • ALL
    • v7.2, v7.0, v6.0, v5.0, v4.4
    • CAR Team 2023-11-27
    • 104

      An unprotected read access of the variable _errMsg from MigrationDestinationManager at the destructor of MoveTimingHelper, can be concurrent with write accesses, e.g. MigrationDestinationManager::_setStateFail or MigrationDestinationManager::_setStateFailWarn

      An implementation idea is to create a copy of the _errMsg protected by the mutex when instantiating a MoveTimingHelper, and not passing an unprotected pointer.

            Assignee:
            aitor.esteve@mongodb.com Aitor Esteve Alvarado
            Reporter:
            pol.pinol@mongodb.com Pol Pinol
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: