SERVER-83161 Fix concurrent read to _errMsg from MigrationDestinationManager without acquiring mutex

(cherry picked from commit a082c2a1393c160d277d62683898ed9fe6dd13fc)