src/mongo/db/s/migration_destination_manager.cpp
@@ -1219,12 +1219,20 @@ void MigrationDestinationManager::_migrateDriver(OperationContext* outerOpCtx,
     invariant(!_min.isEmpty());
     invariant(!_max.isEmpty());
 
-    boost::optional<MoveTimingHelper> timing;
     boost::optional<Timer> timeInCriticalSection;
+    boost::optional<MoveTimingHelper> timing;
+    mongo::ScopeGuard timingSetMsgGuard{[this, &timing] {
+        // Set the error message to MoveTimingHelper just before it is destroyed. The destructor
+        // sends that message (among other things) to the ShardingLogging.
+        if (timing) {
+            stdx::lock_guard<Latch> sl(_mutex);
+            timing->setCmdErrMsg(_errmsg);
+        }
+    }};
 
     if (!skipToCritSecTaken) {
         timing.emplace(
-            outerOpCtx, "to", _nss.ns(), _min, _max, 8 /* steps */, &_errmsg, _toShard, _fromShard);
+            outerOpCtx, "to", _nss.ns(), _min, _max, 8 /* steps */, _toShard, _fromShard);
 
         LOGV2(
             22000,
